@@ -291,3 +291,4 @@ suggestions:
   Reg
   Yaroslav Molochko
   Michael Meier
+  Slaven ʙanovic
