@@ -681,6 +681,7 @@
 #define STRING_EVAL_UNSUPPORTED      "Nicht unterstützter Operator: '{1}'."
 #define STRING_EVAL_OP_EXPECTED      "Operator erwartet."
 #define STRING_EVAL_NO_EVAL          "Der Ausdruck konnte nicht ausgewertet werden."
+#define STRING_EVAL_NOT_EXPRESSION   "The value is not an expression."
 #define STRING_PAREN_MISMATCH        "Ungültige Klammerung in Ausdruck."
 
 // edit
